@@ -8,12 +8,9 @@ import org.springframework.stereotype.Component;
 
 import com.kenstevens.stratinit.model.City;
 import com.kenstevens.stratinit.site.Action;
-import com.kenstevens.stratinit.site.ActionQueue;
 import com.kenstevens.stratinit.site.Command;
 import com.kenstevens.stratinit.site.command.BuildUnitCommand;
 import com.kenstevens.stratinit.type.UnitType;
-import com.kenstevens.stratinit.ui.selection.SelectEvent;
-import com.kenstevens.stratinit.ui.selection.Selection.Source;
 import com.kenstevens.stratinit.util.Spring;
 
 @Scope("prototype")
